--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Примечание: для деплоя на продакшен замените окончание "development.js" на "production.min.js". -->
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>    
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>   --> 
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!-- Загрузим наш React-компонент. -->
     <script src="index.js"></script>
