--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>    
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>   --> 
+    <script src="bundle.js"></script>
     
     <!-- Загрузим наш React-компонент. -->
     <script src="index.js"></script>
